deployment/staging/set_app_name.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freenet-org
  namespace: freenetorg
spec:
  selector:
    matchLabels:
      app: freenet-org-staging
  template:
    metadata:
      labels:
        app: freenet-org-staging
    spec:
      containers:
        - name: freenet-org-app-staging
          image: us-east1-docker.pkg.dev/freenet-353920/freenet-repo/freenet-org-staging
