deployment/staging/attach_backend_config.yaml
apiVersion: v1
kind: Service
metadata:
  name: freenet-org
  namespace: freenetorg
  annotations:
    cloud.google.com/backend-config: '{"default" : "backend-config-staging"}'
    networking.gke.io/v1beta1.FrontendConfig: "frontend-config-staging"
spec:
  selector:
    app: freenet-org-staging
