deployment/staging/attach_frontend_config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress
  namespace: freenetorg
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: "frontend-config-staging"
