deployment/staging/set_static_ip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-https-ingress
  namespace: freenetorg
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "freenet-org-staging-static"
    networking.gke.io/managed-certificates: managed-cert-staging
    kubernetes.io/ingress.class: "gce"
